tests/ui/traits/const-traits/cross-crate.stock.stderr
error: cannot call conditionally-const method `<cross_crate::Const as cross_crate::MyTrait>::func` in constant functions
  --> $DIR/cross-crate.rs:22:5
   |
LL |     Const.func();
   |     ^^^^^^^^^^^^

error: aborting due to 1 previous error

